fix: :bug: Fix the camera size in call
The camera has different sizes in different user cam's quality

--- a/frontend/web_chat_frontend/src/App.css
+++ b/frontend/web_chat_frontend/src/App.css
@@ -27,6 +27,7 @@
 
 .video-container {
 	display: grid;
+	width: 40%;
 	grid-template-columns: 1fr 1fr;
 	justify-content: center;
 	align-content: center;
